[tool.poetry]
name = "mqtt-rtd"
version = "0.1.0"
description = ""
authors = ["weichweich <archbelt@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiomqtt = "^1.2.1"
marshmallow = "^3.20.1"
marshmallow-dataclass = "^8.6.0"


[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
